Correction for transport.data.gouv.fr in home.html (#20793)
* Correction for transport.data.gouv.fr in home.html

Delete extra space in the list of highlighted startups

* Add word wrap for title of cards

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -115,6 +115,10 @@
   padding: 1em;
 }
 
+.fr-card__title {
+  word-wrap: break-word;
+}
+
 /* Ajouter un nouveau style rond sur les cartes */
 .fr-card.fr-card__img__rounded {
   background: linear-gradient(180deg, #ffffff00 20%, #f9f8f6 20%)
